Vol 1 No 4 - More content and some fixes

--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <LINK rel="stylesheet" type="text/css" href="../bi_styles.css" title="Baseball Ink Styles">
-<TITLE>Baseball Ink -- All-Star State Teams:  Alabama</TITLE>
+<TITLE>Baseball Ink &mdash; All-Star State Teams:  Alabama</TITLE>
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 </HEAD>
 <BODY>
