--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
@@ -14,11 +14,11 @@ by Richard Johnson
 
 Dervil Burlow was "hanging on by his fingernails."
 
-Someone on or around the ball club would use that line almost every day. It fit Dervil because he was a knuckleball pitcher -- an increasingly luckless knuckleballer facing the unspeakable dejection of losing his place on a big league roster.
+Someone on or around the ball club would use that line almost every day. It fit Dervil because he was a knuckleball pitcher &mdash; an increasingly luckless knuckleballer facing the unspeakable dejection of losing his place on a big league roster.
 
 Dervil was 50 and his floater was barely staying afloat. And when it did run its intended wayward course up to the plate he wasn't getting the confounded thing over.
 
-He didn't have arm trouble or any real physical problem, save the aches and pains that go with a 50-year-old man's attempt to play a game organized for much younger men. He was suffering something closer akin to golf yips, a fraying of nerves or perhaps diminishing powers of concentration -- both key ingredients of the knuckleball concoction.
+He didn't have arm trouble or any real physical problem, save the aches and pains that go with a 50-year-old man's attempt to play a game organized for much younger men. He was suffering something closer akin to golf yips, a fraying of nerves or perhaps diminishing powers of concentration &mdash; both key ingredients of the knuckleball concoction.
 
 Throwing the knuckler is a strangely delicate business, requiring endless adjustment to release the ball perfectly off the fingertips. Hitting a groove, finding a level of consistency is extremely difficult and for Dervil this season had become virtually impossible.
 
@@ -30,7 +30,7 @@ In mid-July the Chicago BigStixx had begun to play better ball. No longer mired 
 
 His minimal contribution was becoming mortally obvious. If he didn't start getting some batters out soon, he was not going to be sent to the minors, he was going to be released outright.  There was no team to pick him up outside the amateur leagues in his hometown of Bainbridge, Ohio. The BigStixx overseers looking down on Dervil from the owner's box, like glassed-off Gods, were going to call it a career for him.
 
-Dervil Burlow had become baseball's oldest cliche -- the fading veteran. It was all slipping away without his being able to control it -- like the shock sensation of backward movement when the car sitting next to yours edges forward while yours stands still.
+Dervil Burlow had become baseball's oldest cliche &mdash; the fading veteran. It was all slipping away without his being able to control it &mdash; like the shock sensation of backward movement when the car sitting next to yours edges forward while yours stands still.
 
 But his fade was part of the natural rhythm of the game. It was nothing to be ashamed of. Dervil understood this and was trying to handle the shadowy late afternoon of his career with as much grace and goodwill as he could muster.
 
@@ -38,9 +38,9 @@ And he was succeeding. About the only thing Dervil worried about these days were
 
 He was one of the few paid professionals who actually felt the romantic notions about the sport that so many who DON'T play the game seem to feel. Yet professional baseball had never been precisely what Dervil had expected.
 
-By all rights, Dervil should never have played professional baseball at all. Except that he was sensible enough early enough to realize that he wasn't going to achieve his boyhood dream on anything that had come to him naturally. So he focused intently on Hoyt Wilhelm and Phil Niekro and Wilbur Wood and all those other pitchers who couldn't throw hard, yet had mastered a single trick pitch -- the knuckleball.  It seemed so simple and so perfect.
+By all rights, Dervil should never have played professional baseball at all. Except that he was sensible enough early enough to realize that he wasn't going to achieve his boyhood dream on anything that had come to him naturally. So he focused intently on Hoyt Wilhelm and Phil Niekro and Wilbur Wood and all those other pitchers who couldn't throw hard, yet had mastered a single trick pitch &mdash; the knuckleball.  It seemed so simple and so perfect.
 
-He had sent off letters to every living knuckleball pitcher -- every professional he knew of with a knuckler in his repertoire. Some responded -- Wilhelm's letter being especially encouraging.  Meanwhile, Dervil had accumulated a veritable knuckleball museum of clippings; stray references to old-time practitioners of the pitch found in baseball memoirs; tips, anecdotes, hundreds of old news photographs, and occasionally baseball card with pictures of knuckleball pitchers demonstrating their grips; two fingers, three fingers, even Jim Bouton's odd four-finger technique -- across, over and off the seams. He lived the pitch and eventually, after commanding himself to throw 10,000 knuckleballs into a net set up in his backyard he possessed a little gem of a rotation-less pitch, something that would dance preposterously on the way to the plate.
+He had sent off letters to every living knuckleball pitcher &mdash; every professional he knew of with a knuckler in his repertoire. Some responded &mdash; Wilhelm's letter being especially encouraging.  Meanwhile, Dervil had accumulated a veritable knuckleball museum of clippings; stray references to old-time practitioners of the pitch found in baseball memoirs; tips, anecdotes, hundreds of old news photographs, and occasionally baseball card with pictures of knuckleball pitchers demonstrating their grips; two fingers, three fingers, even Jim Bouton's odd four-finger technique &mdash; across, over and off the seams. He lived the pitch and eventually, after commanding himself to throw 10,000 knuckleballs into a net set up in his backyard he possessed a little gem of a rotation-less pitch, something that would dance preposterously on the way to the plate.
 
 He had surprised himself and made it, though it was a tough, hard life, DESPITE the staggering amount of money he had come into in the latter part of his career. He'd lasted so long because his arm had held up, like most knuckleball-throwing arms do. He had been about as effective in his late thirties as at any other time of his career, having followed the usual career path of the knuckleballer.  Never sensational, but steady and very effective when getting the pitch over.
 
@@ -48,7 +48,7 @@ Now it was ending, and Dervil was damn sure going to enjoy his final appearances
 
 This night in July against the Kansas City Landsharks, the suspense ended early. The BigStixx were down seven to nothing in the fifth, and so it was time for Dervil Burlow to bring in his mop and bucket.  He had been up in the bullpen for a full inning and was actually making the ball jump a little this warm, humid night. Still, inside him there bit a hard a sense of doom. A feeling that though his butterfly pitch was fluttering, this night had the big goodbye stamped all over it.  The more he thought of it, the more sure he was that this would be his Last Outing.
 
-The call came down from manager Filch Meyers -- Dervil would start the sixth. And the feeling inside became stronger.  He was standing on the bullpen mound waiting for the BigStixx side to be done in the top of the inning. He surveyed the crowd, guessing that about 25,000 paying customers were on hand to witness his final professional appearance.
+The call came down from manager Filch Meyers &mdash; Dervil would start the sixth. And the feeling inside became stronger.  He was standing on the bullpen mound waiting for the BigStixx side to be done in the top of the inning. He surveyed the crowd, guessing that about 25,000 paying customers were on hand to witness his final professional appearance.
 
 As he looked, around a wave of sentiment came over Dervil, and he wanted nothing more than to stop and memorize what was happening within the confines of BigStixx Stadium.  He looked hard at the grandstands, making a 180-degree sweep of the ballpark with his eyes. He glanced up at the press box and then to his teammates in the BigStixx bullpen.
 
@@ -56,9 +56,9 @@ When BigStixx centerfielder Clay Grencher ended the inning by fouling out to the
 
 Dervil felt the plush, green pile of the short right field grass under his feet as he walked to the mound, then the scrape of the infield dirt under his cleats. He watched the infielders arrive at their positions from the dugout and begin taking lackluster grounders tossed across the diamond by Billy Darryl at first base.
 
-He pounded his glove as he walked and even tried to introduce a slight swagger as he approached the hill. Then Dervil climbed the mound as though it were Mt. Olympus, did everything but plant a flag at the summit. He puffed up two or three times, reached down for the rosin bag in a great swoop, then bounced it in his palm seven times -- after the seventh he abruptly pulled his hand away and allowed the bag to drop gracefully onto the sacred soil of the mound.
+He pounded his glove as he walked and even tried to introduce a slight swagger as he approached the hill. Then Dervil climbed the mound as though it were Mt. Olympus, did everything but plant a flag at the summit. He puffed up two or three times, reached down for the rosin bag in a great swoop, then bounced it in his palm seven times &mdash; after the seventh he abruptly pulled his hand away and allowed the bag to drop gracefully onto the sacred soil of the mound.
 
-After a bit more ritual -- some purposeful digging with his right foot, banging the ball into his glove several times while facing centerfield, scrunching up his face, then drawing his lips tightly together once or twice like Steve Carlton -- he came to be aware that he was overdoing it. His catcher, Mike Hoeft, was standing upright behind the plate staring at him.
+After a bit more ritual &mdash; some purposeful digging with his right foot, banging the ball into his glove several times while facing centerfield, scrunching up his face, then drawing his lips tightly together once or twice like Steve Carlton &mdash; he came to be aware that he was overdoing it. His catcher, Mike Hoeft, was standing upright behind the plate staring at him.
 
 He began tossing warmup pitches to Hoeft. After three "fastballs" he dug his nails into the seams and began gingerly tossing knucklers up to the plate. The first few moved slightly, but before finishing the warm-up tosses, he got off a couple of ripplers. Hoeft couldn't handle the last one, even with the oversized gorilla of a catcher's mitt reserved for pawing at Dervil's knucklers.
 
@@ -66,7 +66,7 @@ After picking up the ball, looking it over as if to see if it had magic knuckleb
 
 Threlkeld was a brontosaurus of a man who, like most free-swinging power hitters, hated to face a knuckleball pitcher - except when the knuckler in question failed to dance. And since Dervil's knuckler had been of a wallflower of late, Thrill Kill was fairly licking his chops.
 
-No matter to Dervil, who was going to enjoy his Last Outing. He was going to take the memory of facing "Thrill Kill" Threlkeld to the hereafter. In fact, as he went into his windup, Dervil anticipated one of those classic self-effacing baseball reminiscences -- a tale of the 450-foot Threlkeld home run that sent him to the showers once and for all. He could put a funny Joe Garagiola spin on it and regale the boys of winter someday. There is no shame in telling such a story on yourself. It says that you were once part of the great fraternity of baseball.
+No matter to Dervil, who was going to enjoy his Last Outing. He was going to take the memory of facing "Thrill Kill" Threlkeld to the hereafter. In fact, as he went into his windup, Dervil anticipated one of those classic self-effacing baseball reminiscences &mdash; a tale of the 450-foot Threlkeld home run that sent him to the showers once and for all. He could put a funny Joe Garagiola spin on it and regale the boys of winter someday. There is no shame in telling such a story on yourself. It says that you were once part of the great fraternity of baseball.
 
 Unfortunately for this scenario, Dervil's first knuckleball glided up to the plate at the accustomed 63 miles per hour and then took a nasty careening dive into the dirt just as Threlkeld turned into it. A perfect knuckleball pitch.
 
@@ -98,7 +98,7 @@ And he was back on the mound. The stands were full, and there was a big commotio
 
 Dervil knew what would happen next. Or least he knew what was supposed to have happened. The big bandy-legged galoot up at the plate with the overhang around the belt was going to point his 42-ounce bat toward centerfield and call his shot.
 
-Dervil stood on the mound and challenged him to do it.  He stood there waiting to see if Babe Ruth -- two strikes against him -- would have the NERVE to foretell a home run for himself and show Dervil up in front of this big World Series crowd in Chicago. If he does, like some say he did, Dervil would cram a little history down his throat. He won't be party to another man's legend. Instead, Dervil would put Ruth on the seat of his pants.
+Dervil stood on the mound and challenged him to do it.  He stood there waiting to see if Babe Ruth &mdash; two strikes against him &mdash; would have the NERVE to foretell a home run for himself and show Dervil up in front of this big World Series crowd in Chicago. If he does, like some say he did, Dervil would cram a little history down his throat. He won't be party to another man's legend. Instead, Dervil would put Ruth on the seat of his pants.
 
 The taunts from the Cubs dugout grew louder.
 
@@ -128,7 +128,7 @@ This time Dervil was determined to alter the course of events so that Ray Chapma
 
 But Dervil dipped his right shoulder, came from way over on the third base side of the mound and let loose with a killer fastball that was going nowhere near the outside of the plate. It was sailing straight for Chapman's head. Dervil knew it before Chapman did, and he struggled like a man trying to wake himself up from a nightmare.
 
-He finally he got it out -- "Watch out!" he called to Ray Chapman. And instinctively the Cleveland Indian at the plate collapsed his body, pulled in his head and Dervil's submarine fastball caught the bill of Chapman's hat and sent it spinning.
+He finally he got it out &mdash; "Watch out!" he called to Ray Chapman. And instinctively the Cleveland Indian at the plate collapsed his body, pulled in his head and Dervil's submarine fastball caught the bill of Chapman's hat and sent it spinning.
 
 Chapman sprang up and shot Dervil a look of stunned surprise. Dervil thought Chapman might charge the mound. But he didn't. Ray Chapman seemed to have caught a whiff of history himself. He looked at Dervil, eyes wide and now faintly confused. Then he nodded at Dervil ever so slightly.
 
@@ -154,7 +154,7 @@ Later he could open his eyes a little and listen some more and found that he had
 
 Dervil improved. He was soon able to pick up some of the newspapers which had accumulated and he began to read about the accident. He saw pictures of himself lying flat on the ground, players standing around him looking glum; pictures of him being carried off on a stretcher with Filch and "Thrill Kill" walking alongside.
 
-Then he read recaps of his career that sounded like obituaries. They were filled with tributes that Dervil supposed were meant as eulogies -- how when his knuckleball was really dancing he was untouchable. Dervil read on about himself and his place, only moderately remarkable though it was, in baseball history.
+Then he read recaps of his career that sounded like obituaries. They were filled with tributes that Dervil supposed were meant as eulogies &mdash; how when his knuckleball was really dancing he was untouchable. Dervil read on about himself and his place, only moderately remarkable though it was, in baseball history.
 
 He was about to put down the last paper, the sports section of the Sunday Chicago Tribune, when his eye caught sight of a short item on page six, near the bottom on the right hand page in a column made up of several news briefs.
      
