--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
@@ -40,7 +40,7 @@ by Kerri S. McIntire
 <P>Swords (air)&#9;&#9;Balls&#9;&#9;&#9;Balls&#9;&#9;&#9;&#9;Bases</P>
 <P>Disks (earth)&#9;&#9;Bases&#9;&#9;&#9;Caps&#9;&#9;&#9;&#9;Balls</P>
 
-<P>All three decks use <strong>Bats</strong> for <strong>Wands</strong> -- the <em>fire</em> suit symbolizing creative experiences. The Wand is a lightning rod that absorbs power from without and uses it to spark power from within. The bat is the instrument by which a hitter can channel the energy of a pitched ball into an expression of his or her own inner individual force.</P>
+<P>All three decks use <strong>Bats</strong> for <strong>Wands</strong> &mdash; the <em>fire</em> suit symbolizing creative experiences. The Wand is a lightning rod that absorbs power from without and uses it to spark power from within. The bat is the instrument by which a hitter can channel the energy of a pitched ball into an expression of his or her own inner individual force.</P>
 
 <P>All the decks use a <strong>Glove</strong>, or <strong>Mitt</strong>, for <strong>Cups</strong>. This is fitting, as the <em>water</em> suit symbolizes emotional experiences like receptivity, flexibility and relating. The catcher is clearly in a receptive relationship with the pitcher. The fielders, too, are in a position of receiving and cooperation. It is the give-and-take interplay of gloves that creates a team.</P>
 
