--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_the_home_of_the_braves.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_the_home_of_the_braves.html
@@ -30,7 +30,7 @@ But these men and events were not only memories that defined me as a young man. 
 
 Now that is being taken away, too.
 
-I know life moves on, I just don't like where it takes me sometimes.  Today's game of baseball is very different, as are the players.  In many ways they seem more talented.  They are -- without a doubt -- bigger, stronger and faster than the players I watched as a youngster.  However, there is an air of detachment in today's hitters, pitchers and fielders that men of my age resent.  The players seem to be running a business -- a big business at that.  They want many guarantees.
+I know life moves on, I just don't like where it takes me sometimes.  Today's game of baseball is very different, as are the players.  In many ways they seem more talented.  They are &mdash; without a doubt &mdash; bigger, stronger and faster than the players I watched as a youngster.  However, there is an air of detachment in today's hitters, pitchers and fielders that men of my age resent.  The players seem to be running a business &mdash; a big business at that.  They want many guarantees.
 
 Given such a mindset, they frequently take no risks on the field, making the game too predictable for my taste.  The beauty of the game has been diminished, because beauty, in my mind, cannot be created without risk.
 
