Vol 1 No 4 - Initial final cut

--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
@@ -42,7 +42,7 @@ Mike McCann
 <em>
 Mike is always looking for people to attend baseball games with him, so if you are interested, please contact him at <a href="mailto:bunko@udel.edu">bigbunko@netzero.net</a>
 
-Learn more about Bunko's quest to visit every major and minor league stadium: <a href="http://www.netcolony.com/sports/bunko/" TARGET="_top">http://www.netcolony.com/sports/bunko/</a>
+Learn more about Bunko's quest to visit every major and minor league stadium: <a href="http://www.netcolony.com/sports/bunko/">http://www.netcolony.com/sports/bunko/</a>
 </em>
 
 
