--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
@@ -57,7 +57,7 @@
 -->
 
 
-<a href="http://www.baseballink.com" TARGET="_top">Click here to go to the Baseball Ink Home Page</a>
+<a href="http://www.baseballink.com">Click here to go to the Baseball Ink Home Page</a>
 </BODY>
 
 </HTML>
