Vol 2 No 1 - More stories; alt tags for past Diamond Madness

--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tommy_t.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tommy_t.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<H2>Tommy T's Baseball Flix Pix </H2>
+<h1>Tommy T's Baseball Flix Pix </h1>
 <H3>61* (2001)</H3>
 
 Director Billy Crystal brings us the true to life story of the chase by Roger Maris and Mickey Mantle to break Babe Ruth's home run record, or as the then commissioner of baseball Ford Frick, called it "the best record in baseball."  We all know the story well &mdash; it's been told and retold many times over the past 40 years &mdash; how the whole country was following the chase, how Mickey was the preferred choice by almost all to break the record, how the stress affected Maris (hair falling out, psoriasis, surliness toward some fans and the press).  This time the story is told by sandwiching it between glimpses of the actual Sosa/McGwire race of 1998 &mdash; a very nice piece of historic filmmaking.
