--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
@@ -6,8 +6,8 @@
 </HEAD>
 <BODY>
 <CENTER>
-<strong><FONT SIZE=5>All-Star State Teams:  New York</strong></FONT>
-<FONT SIZE=2>submitted by Tommy T.</FONT>
+<strong>All-Star State Teams:  New York</strong>
+submitted by Tommy T.
 
 <table>
 <tr>
@@ -93,7 +93,7 @@
 </tr>
 </table>
 </CENTER>
-<P><FONT SIZE=2>Submit your best All-State baseball team!  Players on the list must have been born in the state of choice and must have played in the major leagues or Negro leagues.</P></FONT>
+<P>Submit your best All-State baseball team!  Players on the list must have been born in the state of choice and must have played in the major leagues or Negro leagues.</P>
 
 
 <HR>
