--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
@@ -9,7 +9,7 @@
 <CENTER>
 <IMG BORDER="0" SRC="../images/bi_logo_xsm.gif">
 
-<H2>Vol. 2, No. 2 - September 2001</H2>
+<h1>Vol. 2, No. 2 - September 2001</h1>
 <H3>Table of Contents</H3>
 <HR>
 </CENTER>
