--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_only_the_ball.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_only_the_ball.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<H2>Only The Ball Was Dead</H2>
+<h1>Only The Ball Was Dead</h1>
 <H3>Conversations with Connie Mack's White Elephants</H3>
 <em>
 Fiction by C. B. Rothwell
